<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="רישום משתמש"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="560dp"
        android:layout_gravity="center"
        android:orientation="vertical">




        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/emailTextView"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etDisplayName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/displayNameTextView"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/phoneTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/idTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/passwordTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/etReEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:alpha="0.7"
            android:ems="10"
            android:hint="@string/reEnterPassTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="18dp" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_style"
            android:onClick="onEmailPasswordSignUpClick"
            android:text="@string/signUpButtonText"
            android:textAllCaps="false"
            android:textSize="18dp" />
    </LinearLayout>



</LinearLayout>