<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".corridorActivity">




    <LinearLayout
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_height="500dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="כניסת משתמש"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/tvSigninEmail"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:hint="@string/emailTextView"
            android:alpha="0.3"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="22dp"
            />

        <EditText
            android:id="@+id/tvSigninPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:alpha="0.3"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passwordTextView"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="22dp" />

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:alpha="0.7"
            android:text="@string/signInButtonText"
            android:textAllCaps="false"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_weight="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onForgotPasswordClicked"
            android:clickable="true"
            android:textSize="15dp"
            android:text="@string/ForgotPasswordTextView"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/OrSeparatorTextView" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:layout_gravity="left" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" />
        <Button
            android:id="@+id/btnToSignUp"
            android:layout_weight="1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:textAllCaps="false"
            android:textSize="14dp"
            android:alpha="0.7"
            android:text="@string/toSignUpButtonText" />

        <Button
            android:id="@+id/btnContinueToServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onContinueToServicesClicked"
            android:background="@color/colorPrimary"
            android:text="המשך לתפריטים"/>


    </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>