<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="כניסת משתמש"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        />

<LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">




    <EditText
        android:id="@+id/tvSigninEmail"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/emailTextView"
        android:alpha="0.3"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="22dp"
        />

    <EditText
        android:id="@+id/tvSigninPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:alpha="0.3"
        android:layout_gravity="center_horizontal"
        android:hint="@string/passwordTextView"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textSize="22dp" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:alpha="0.7"
        android:background="@drawable/btn_style"

        android:text="@string/signInButtonText"
        android:textAllCaps="false"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_weight="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:textSize="15dp"
        android:text="@string/ForgotPasswordTextView"
        android:layout_gravity="center"
        />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_gravity="left" />


</LinearLayout>



</LinearLayout>